--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -6,7 +6,7 @@
 
 @layer utilities {
   .wrapper {
-    @apply max-w-7xl lg:mx-auto p-2 md:py-4 md:px-10 w-full;
+    @apply max-w-7xl lg:mx-auto px-6 py-4 md:py-4 md:px-10 w-full;
   }
 
   .flex-start {
