finished cart pages

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -165,9 +165,29 @@ html[dir="rtl"] {
     animation: rotate 1s infinite linear;
   }
 
+  ::view-transition-new(.slide-up) {
+    animation: slideUp 1s;
+  }
   @keyframes rotate {
     to {
       transform: rotate(1turn);
+    }
+  }
+
+  @keyframes slideUp {
+    from {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    ::view-transition-new(.slide-up) {
+      animation: none;
     }
   }
 }
